--- a/pages/siggraph.html
+++ b/pages/siggraph.html
@@ -8,7 +8,7 @@
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-<div>
+<div class="container">
     <div>
         <h2>Annie Spangler</h2>
         <h3>Siggraph 2025</h3>
