--- a/pages/siggraph.html
+++ b/pages/siggraph.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Annie Spangler - Siggraph 2025</title>
+    <title>Anastasia Spangler - Siggraph 2025</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -11,10 +11,11 @@
 <div class="container">
     <div>
         <h2>Annie Spangler</h2>
-        <h3>Siggraph 2025</h3>
+        <h3>SIGGRAPH 2025</h3>
     </div>
     <div>
-        <p>Junior Computer Science Student from Seattle University</p>
+        <p><b>Rising Senior at Seattle University, BA in Computer Science</b></p>
+        <p>Graduating in June 2026</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
