--- a/pages/siggraph.html
+++ b/pages/siggraph.html
@@ -4,22 +4,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Anastasia Spangler - Siggraph 2025</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <style>
+        .parent {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr repeat(2, 3fr) 1fr;
+            grid-column-gap: 5px;
+            grid-row-gap: 5px;
+        }
+    </style>
 </head>
-<body>
-<div class="container">
+<body style="font-family: Verdana, sans-serif">
+<div class="parent">
     <div>
-        <h2>Annie Spangler</h2>
+        <h2>Anastasia Spangler</h2>
+    </div>
+    <div>
         <h3>SIGGRAPH 2025</h3>
     </div>
+    <div><p>:)</p></div>
     <div>
-        <p><b>Rising Senior at Seattle University, BA in Computer Science</b></p>
-        <p>Graduating in June 2026</p>
+        <p>Senior at Seattle University, graduating June 2026</p>
+        <a href="#">Full Resume</a>
     </div>
+    <div>
+        <p>Skills</p>
+        <p>Courses</p>
+    </div>
+    <div>
+        <p>Interests & Hobbies</p>
+    </div>
+    <div>
+        <h3>Papers in the Wild</h3>
+    </div>
+    <div>
+        <h3>Papers in the Wild</h3>
+    </div>
+    <div>
+        <h3>Papers in the Wild</h3>
+    </div>
+    <div><p>Github</p></div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
 </body>
 </html>
