updated landing and added projects page

--- a/pages/Projects/drone_splat.html
+++ b/pages/Projects/drone_splat.html
@@ -155,8 +155,7 @@
                 </div>
             </div>
             <br>
-            <p>When I first started this, I had no remote GPU experience, did not have the drone yet, and only had a
-                basic idea of what a Gaussian splat even was.</p><br>
+            <p>This was a way for me to gain experience in running remote training jobs, working with gaussian splats, and preparing datasets.</p><br>
             <p>The circle mode of my DJI Neo was used to capture me at a public garden.</p>
             <br>
             <p>You'll need a paperspace instance and a connection to it working.</p><br>
