--- a/ProjectWebsite/index.html
+++ b/ProjectWebsite/index.html
@@ -20,7 +20,7 @@
 <body>
   <h1>Psyche Inspired VR</h1>
   <p class="subtitle">art comes alive</p>
-  <p class="names">Anastasia Spangler, Jakob Balkovec, Daniel Sekits, Rehaan Cherukatil</p>
+  <p class="names">Anastasia Spangler, Jakob Balkovec, Daniel Sekits, Rehaan Cherukattil</p>
   <img class="banner" src="images/banner_design.png" alt="Psyche Inspired VR banner">
   <section class="description">
     <p>Psyche Inspired VR immerses participants in artworks (2D, 3D, and motion-based) produced by over 130 undergraduate artists in NASA's Psyche Inspired program. Participants journey through a surreal landscape, engaging with the art via dialogue and interactions, and learn about NASA's mission to the metal asteroid Psyche.</p>
