--- a/ProjectWebsite/index.html
+++ b/ProjectWebsite/index.html
@@ -56,6 +56,16 @@
       color: var(--accent-strong);
     }
 
+    .jury-banner {
+      width: 100%;
+      background: #c8161d;
+      color: #fff2f2;
+      font-size: 0.72rem;
+      letter-spacing: 0.04em;
+      text-align: center;
+      padding: 6px 12px;
+    }
+
     .page {
       width: min(1100px, 100%);
       margin: 0 auto;
@@ -238,6 +248,7 @@
   </style>
 </head>
 <body>
+  <div class="jury-banner">For Jury Review only - final Project Page to be hosted on the "psyche.ssl.berkeley.edu" domain.</div>
   <main class="page">
     <header class="hero">
       <div>
