--- a/ProjectWebsite/index.html
+++ b/ProjectWebsite/index.html
@@ -4,21 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Psyche Inspired VR</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      color-scheme: dark;
-      --bg: #05060d;
-      --ink: #eef2ff;
-      --muted: rgba(238, 242, 255, 0.72);
-      --panel: rgba(12, 18, 32, 0.78);
-      --panel-strong: rgba(16, 24, 44, 0.92);
-      --stroke: rgba(142, 170, 255, 0.18);
-      --accent: #62d0ff;
-      --accent-strong: #4ff1c6;
-      --shadow: 0 30px 70px rgba(2, 8, 30, 0.6);
+      --bg: #f6f5f2;
+      --ink: #1b1c1f;
+      --muted: #55585f;
+      --stroke: #d7d8dc;
+      --accent: #1a4a84;
+      --accent-strong: #0f2f55;
     }
 
     * {
@@ -29,22 +22,10 @@
 
     body {
       min-height: 100vh;
-      background: radial-gradient(circle at 20% 20%, rgba(98, 208, 255, 0.12), transparent 45%),
-        radial-gradient(circle at 80% 10%, rgba(79, 241, 198, 0.16), transparent 50%),
-        radial-gradient(circle at 30% 80%, rgba(123, 88, 255, 0.14), transparent 55%),
-        var(--bg);
+      background: var(--bg);
       color: var(--ink);
-      font-family: "Space Grotesk", system-ui, sans-serif;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background-image: radial-gradient(rgba(255, 255, 255, 0.08) 1px, transparent 1px);
-      background-size: 120px 120px;
-      opacity: 0.15;
-      pointer-events: none;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 1.6;
     }
 
     a {
@@ -61,63 +42,59 @@
       background: #c8161d;
       color: #fff2f2;
       font-size: 0.72rem;
-      letter-spacing: 0.04em;
+      letter-spacing: 0.02em;
       text-align: center;
       padding: 6px 12px;
     }
 
     .page {
-      width: min(1100px, 100%);
+      width: min(900px, 100%);
       margin: 0 auto;
-      padding: 56px 24px 88px;
+      padding: 36px 24px 72px;
       display: flex;
       flex-direction: column;
-      gap: 32px;
-      position: relative;
-      z-index: 1;
+      gap: 28px;
     }
 
     .hero {
-      display: grid;
-      grid-template-columns: 1.1fr 0.9fr;
-      gap: 32px;
-      align-items: center;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
     }
 
     .eyebrow {
       text-transform: uppercase;
-      letter-spacing: 0.28em;
-      font-size: 0.72rem;
+      letter-spacing: 0.18em;
+      font-size: 0.7rem;
       color: var(--muted);
-      margin-bottom: 16px;
+      margin-bottom: 8px;
     }
 
     h1 {
-      font-family: "Fraunces", serif;
-      font-size: clamp(2.6rem, 6vw, 4.2rem);
-      line-height: 1.05;
-      margin-bottom: 14px;
+      font-size: clamp(2rem, 4vw, 2.8rem);
+      line-height: 1.15;
+      margin-bottom: 10px;
     }
 
     .subtitle {
-      font-size: clamp(1.05rem, 2vw, 1.4rem);
+      font-size: 1.05rem;
       color: var(--muted);
-      margin-bottom: 22px;
+      margin-bottom: 12px;
     }
 
     .pill-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 28px;
+      display: block;
+      margin-bottom: 14px;
     }
 
     .pill {
-      padding: 8px 14px;
-      border-radius: 999px;
+      display: inline-block;
+      margin-right: 8px;
+      margin-bottom: 6px;
+      padding: 4px 8px;
       border: 1px solid var(--stroke);
-      background: rgba(98, 208, 255, 0.1);
-      font-size: 0.9rem;
+      background: transparent;
+      font-size: 0.85rem;
       color: var(--ink);
     }
 
@@ -128,41 +105,29 @@
     }
 
     .btn {
-      padding: 12px 18px;
-      border-radius: 10px;
+      padding: 8px 12px;
       border: 1px solid var(--stroke);
       font-weight: 600;
-      letter-spacing: 0.02em;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      letter-spacing: 0.01em;
     }
 
     .btn.primary {
-      background: linear-gradient(135deg, rgba(98, 208, 255, 0.2), rgba(79, 241, 198, 0.3));
-      box-shadow: 0 12px 30px rgba(79, 241, 198, 0.2);
+      background: #e8edf5;
       color: var(--ink);
     }
 
     .btn.ghost {
-      background: rgba(10, 14, 28, 0.8);
+      background: transparent;
       color: var(--muted);
     }
 
-    .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.35);
-    }
-
     .hero-media {
-      background: var(--panel);
-      border-radius: 20px;
-      padding: 18px;
       border: 1px solid var(--stroke);
-      box-shadow: var(--shadow);
+      padding: 12px;
     }
 
     .banner {
       width: 100%;
-      border-radius: 14px;
       display: block;
     }
 
@@ -173,11 +138,8 @@
     }
 
     .panel {
-      background: var(--panel);
-      border-radius: 20px;
-      padding: 26px 28px;
-      border: 1px solid var(--stroke);
-      box-shadow: var(--shadow);
+      border-top: 1px solid var(--stroke);
+      padding-top: 18px;
     }
 
     .panel strong {
@@ -185,16 +147,12 @@
     }
 
     .grid-2 {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 18px;
+      display: block;
     }
 
     .stat {
-      padding: 16px;
-      border-radius: 16px;
-      background: var(--panel-strong);
-      border: 1px solid var(--stroke);
+      padding: 8px 0;
+      border-bottom: 1px solid var(--stroke);
     }
 
     .stat .label {
@@ -205,23 +163,20 @@
     }
 
     .stat .value {
-      font-size: 1.4rem;
-      margin-top: 8px;
+      font-size: 1.1rem;
+      margin-top: 4px;
       font-weight: 600;
     }
 
     .team {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 12px;
-      margin-top: 18px;
+      display: block;
+      margin-top: 12px;
     }
 
     .team span {
-      padding: 10px 12px;
-      border-radius: 12px;
-      background: rgba(98, 208, 255, 0.08);
-      border: 1px solid rgba(98, 208, 255, 0.16);
+      display: block;
+      padding: 6px 0;
+      border-bottom: 1px solid var(--stroke);
     }
 
     .disclaimer {
@@ -231,15 +186,6 @@
     }
 
     @media (max-width: 900px) {
-      .hero {
-        grid-template-columns: 1fr;
-      }
-
-      .grid-2,
-      .team {
-        grid-template-columns: 1fr;
-      }
-
       .cta {
         flex-direction: column;
         align-items: flex-start;
