--- a/ProjectWebsite/index.html
+++ b/ProjectWebsite/index.html
@@ -203,7 +203,7 @@
         <p class="subtitle">Art comes alive in a surreal, interactive journey to the metal world of Psyche.</p>
         <div class="pill-row">
           <span class="pill">Meta Quest release: Summer 2026</span>
-          <span class="pill">2D, 3D, and motion-based artworks</span>
+          <span class="pill">2D, 3D, musical, video, and motion-based artworks</span>
         </div>
         <div class="cta">
           <a class="btn primary" href="https://psyche.ssl.berkeley.edu/galleries/artwork/" target="_blank" rel="noopener">Explore the web gallery</a>
@@ -243,7 +243,7 @@
     <section class="panel">
       <strong>Project Team</strong>
       <div class="team">
-        <span>Anastasia Spangler</span>
+        <span>Anastasia Spangler (Lead and Primary Contact)</span>
         <span>Jakob Balkovec</span>
         <span>Daniel Sekits</span>
         <span>Rehaan Cherukattil</span>
